cluster/apps/networking/unifi/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: traefik-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
  name: unifi-ingress
  namespace: networking
spec:
  rules:
    - host: unifi.amrap030.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapi
                port:
                  number: 8443

  tls:
    - hosts:
        - unifi.amrap030.home
      secretName: traefik-cert
